[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://scripts/ui/main_hud.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/ui/HotspotPanel.tscn" id="2"]
[ext_resource type="PackedScene" path="res://scenes/ui/MiniGamePanel.tscn" id="3"]
[ext_resource type="PackedScene" path="res://scenes/ui/QuizPanel.tscn" id="4"]
[ext_resource type="PackedScene" path="res://scenes/ui/DashboardPanel.tscn" id="5"]

[node name="MainHUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="Control" type="Control" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Prompt" type="Label" parent="Control"]
anchors_preset = 1
anchor_right = 1.0
text = "Press E to inspect"
horizontal_alignment = 1
visible = false

[node name="ZoneLabel" type="Label" parent="Control"]
anchors_preset = 1
anchor_right = 1.0
anchor_top = 0.05
text = "Zone"
horizontal_alignment = 1
visible = false

[node name="XPLabel" type="Label" parent="Control"]
position = Vector2(20, 20)
text = "XP: 0"

[node name="BadgePanel" type="Panel" parent="Control"]
position = Vector2(20, 60)
size = Vector2(220, 180)

[node name="Badges" type="VBoxContainer" parent="Control/BadgePanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 6

[node name="Settings" type="VBoxContainer" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
anchor_top = 0.0
anchor_bottom = 0.0
offset_left = -160
offset_top = 20
custom_constants/separation = 8

[node name="MuteButton" type="Button" parent="Control/Settings"]
text = "Mute"

[node name="Panels" type="Control" parent="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HotspotPanel" parent="Control/Panels" instance=ExtResource("2")] 

[node name="MiniGamePanel" parent="Control/Panels" instance=ExtResource("3")] 

[node name="QuizPanel" parent="Control/Panels" instance=ExtResource("4")] 

[node name="DashboardPanel" parent="Control/Panels" instance=ExtResource("5")] 

